--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@
 # .DStore
 .DS_Store
 
+# Jupyter Notebook checkpoints
+.ipynb_checkpoints
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
